--- a/solvingEquations.html
+++ b/solvingEquations.html
@@ -3,7 +3,7 @@
 <head>
         <meta charset="utf-8">
         <title>Balancing Equations</title>
-        <link rel="stylesheet" href="scalestyle.css">
+        <link rel="stylesheet" href="solvingEquations.css">
     </head>
     <body onload="runscale()">
         <canvas id="canvas1" width="600" height="300" style="border:1px solid #000000;"></canvas>
@@ -16,7 +16,7 @@
             <button type="button" id="divide" onclick="displayquotients()">Divide</button>
         </div>
         
-        <script src="scalescript.js"></script>
+        <script src="solvingEquations.js"></script>
         
         <div class="division" id="inputamount">
             <p>How much do you want to divide by?</p>
