--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>Math Apps and Resources</h1>
   </div>
   <div id="navigation">
-    <a href=>Solving Equations App</a>
+    <a href="solvingEquations.html">Solving Equations App</a>
     <a href=>Monty Hall App</a>
     <a href=>Random Number Generator</a>
   </div>
