--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </div>
   <div id="navigation">
     <a href="solvingEquations.html">Solving Equations App</a>
-    <a href=>Monty Hall App</a>
+    <a href="subtractingNegatives.html">Subtracting Negatives</a>
     <a href=>Random Number Generator</a>
   </div>
  
