--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <h1>Math Apps and Resources</h1>
   </div>
   <div id="navigation">
-    <a href="solvingEquations.html">Solving Equations App</a>
+    <a href="solvingEquations.html">Solving Equations</a>
     <a href="subtractingNegatives.html">Subtracting Negatives</a>
-    <a href=>Random Number Generator</a>
+    <a href="montHall.html">Monty Hall Simulation</a>
   </div>
  
 </body>
