--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <a href="solvingEquations.html">Solving Equations</a>
     <a href="subtractingNegatives.html">Subtracting Negatives</a>
     <a href="montyHall.html">Monty Hall Simulation</a>
+    <a href="invaders.html">Knock-Off Space Invaders</a>
   </div>
  
 </body>
