--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <a href="subtractingNegatives.html">Subtracting Negatives</a>
     <a href="montyHall.html">Monty Hall Simulation</a>
     <a href="invaders.html">Knock-Off Space Invaders</a>
+    <a href="tictactoe.html">Tic Tac Toe</a>
   </div>
  
 </body>
