--- a/solvingEquations.html
+++ b/solvingEquations.html
@@ -33,7 +33,17 @@
                 Let's try picking a different number.
             </p>
             <button type="button" onclick="tryagain()">Try again</button>
-        </div> 
+        </div>
+          
+          <div id="solved">
+            You solved it!
+            <br><br>
+            <div id="solution">
+            </div>
+            <br>
+            <button type="button" onclick="runscale()">Try another one</button>
+
+          </div>
 
         </body>
 </html>
