--- a/slopefinder.html
+++ b/slopefinder.html
@@ -3,7 +3,7 @@
 https://github.com/Team-Code/KA_Offline -->
 <html>
  <head>
-    <title>Monty Hall Problem Simulation</title>
+    <title>Find the Slope of a Line</title>
 </head>
  <body>
     <p align="center">
