--- a/slopefinder.html
+++ b/slopefinder.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!-- This is based on DillingerLee's great template here:
-https://github.com/Team-Code/KA_Offline -->
+
 <html>
  <head>
     <title>Find the Slope of a Line</title>
@@ -10,9 +9,7 @@ https://github.com/Team-Code/KA_Offline -->
 	<!--This draws the Canvas on the webpage -->
       <canvas id="mycanvas"></canvas><br>
     </p>
- <!-- Run all the JavaScript stuff -->
- <!-- Include the processing.js library -->
- <!-- See https://khanacademy.zendesk.com/hc/en-us/articles/202260404-What-parts-of-ProcessingJS-does-Khan-Academy-support- for differences -->
+<!--This is accessing the p5.js CDN-->
  <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
  <script src="slopefinder.js"></script>
 
