--- a/slopefinder.html
+++ b/slopefinder.html
@@ -3,6 +3,7 @@
 <html>
  <head>
     <title>Find the Slope of a Line</title>
+    <link rel="stylesheet" href="slopefinder.css">
 </head>
  <body>
     <p align="center">
