--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <div id="navigation">
     <a href="solvingEquations.html">Solving Equations</a>
     <a href="subtractingNegatives.html">Subtracting Negatives</a>
+    <a href="slopefinder.html">Find the Slope of a Line</a>
    
   </div>
  
