--- a/gravity.html
+++ b/gravity.html
@@ -3,7 +3,7 @@
 <html>
  <head>
     <title>Gravity Simulator</title>
-    <link rel="stylesheet" href="slopefinder.css">
+    <link rel="stylesheet" href="gravity.css">
 </head>
  <body>
     <p align="center">
