--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <a href="solvingEquations.html">Solving Equations</a>
     <a href="subtractingNegatives.html">Subtracting Negatives</a>
     <a href="slopefinder.html">Find the Slope of a Line</a>
+    <a href="interceptfinder.html">Find the X and Y intercepts of a Line</a>
    
   </div>
  
