--- a/electrostatics.html
+++ b/electrostatics.html
@@ -2,7 +2,7 @@
 
 <html>
  <head>
-    <title>Gravity Simulator</title>
+    <title>Electrostatics Simulator</title>
     <link rel="stylesheet" href="gravity.css">
 </head>
  <body>
