--- a/3dObj.html
+++ b/3dObj.html
@@ -11,7 +11,7 @@
    
 <!--This is accessing the p5.js CDN-->
  <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
- <script src="gravity.js"></script>
+ <script src="3dObj.js"></script>
  </p>
  </body>
  
