--- a/3dObj.html
+++ b/3dObj.html
@@ -2,7 +2,7 @@
 
 <html>
  <head>
-    <title>Gravity Simulator</title>
+    <title>3D Object Practice</title>
     <link rel="stylesheet" href="gravity.css">
 </head>
  <body>
